--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,12 +5,41 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <%= stylesheet_link_tag 'application', 'http://fonts.googleapis.com/css?family=Raleway:400,700' %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <%= favicon_link_tag '/favicon.ico' %>
   </head>
 
   <body>
-    <%= yield %>
+
+    <div id="sidebar">
+      <ul>
+        <li class="category"><%= link_to "Tumblr", root_path %></li>
+        <li> <%= link_to "Posts", root_path %></li>
+        <li>About</li>
+      </ul>
+      <p class="sign_in"> User Login </p>
+    </div>
+
+    <div id="main_content">
+      <div id="header">
+        <p>Post feed</p>
+        <div class="buttons">
+          <button class="button"><%= link_to "Make post", new_post_path %></button>
+          <button class="button">Sign Out</button>        
+        </div>
+      </div>
+      
+      <% flash.each do |name, msg| %>
+        <%= content_tag(:div, msg, class: "alert") %>
+      <%end%>
+
+      <%= yield %>
+
+    </div>
+
+
+
   </body>
 </html>
