--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,7 +3,9 @@
 		<%= @post.title %>
 	</h1>
 	<p class="date">
-		Submitted <%= time_ago_in_words(@post.created_at) %> ago
+		Submitted <%= time_ago_in_words(@post.created_at) %> ago | 
+		<%= link_to "Edit", edit_post_path(@post) %> |
+		<%= link_to 'Delete', post_path(@post), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }%>
 	</p>
 	<p class="body">
 		<%= @post.body %>
